Fixed bug in main nav. Stopping its use because of carousel. Added overflow:hidden.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ h2 {
     color: #eae8ff;
 }
 
-.dropdown-item:hover {
+/* .dropdown-item:hover {
     background-color: #23e0e7;
 }
 
@@ -70,7 +70,10 @@ h2 {
 
 .navbar-toggler-icon {
     background-color: #23e0e7;
-}
+} */
+
+
+
 /* Referenced from love running project, CodeInstitute ------------------------*/
 #hero-image {
     height: 600px;
@@ -178,6 +181,8 @@ footer {
 
 #gallery-carousel {
     width: 100%;
+    max-height: 600px;
+    overflow: hidden;
 }
 
 .carousel-item {
